# aurora_fw

./: .gitignore  .gitmodules  CMakeLists.txt
include/: FreeRTOSConfig.h  adc.h  bsp_driver_sd.h  dma.h  ffconf.h  gpio.h  log.h  main.h  net_config.h  network.h  rtc.h  sdio.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h  tim.h  usart.h  usb_device.h  usbd_conf.h
lib/: CMakeLists.txt
lib/configs/: configs.c  configs.h
lib/newlib/: assert.c
lib/utils/: uuid.c
lib/xprintf/: xprintf.h
src/: Aurora  Aurora_flash.ld  CMakeLists.txt  _write.c  adc.c  bsp_driver_sd.c  dma.c  fatfs.c  ff_demo.c  freertos.c  gpio.c  main.c  network.c  newlib.c  rtc.c  sdio.c  stm32f2xx_hal_msp.c  stm32f2xx_hal_timebase_TIM.c  stm32f2xx_it.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
src/CycloneTCP_extras/: ftpd.c  ftpd.h  sntpd.c  sntpd.h
src/CycloneTCP_extras/rest/: powermanagment.c  rest.h  sensors.c  sensors.h
src/driver/src/devices/: gpio_driver.c
src/fatfs_extras/: bsp_driver_sd.c  bsp_driver_sd.h  diskio.c  ff_gen_drv.h  sdio.c  sdio.h
src/stuff/: configs.h  rtc.c
src/tasks/: blink.c  blink.h  ff_demo.c  ff_demo.h  httpd.c  httpd.h  network.c  network.h
